--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "mybench"
-version = "0.1.3"
+version = "0.1.5"
 authors = ["dvshapkin <dvshapkin@mail.ru>"]
 edition = "2018"
 
-description = "Simple (and very primitive) benchmarking"
+description = "Simple (and very primitive) benchmarking macro."
 
 readme = "README.md"
 
@@ -12,7 +12,7 @@ documentation = "https://docs.rs/mybench"
 homepage = "https://github.com/dvshapkin/mybench"
 repository = "https://github.com/dvshapkin/mybench"
 
-keywords = ["benchmarking", "performance-measure"]
+keywords = ["benchmarking", "performance"]
 
 license = "MIT"
 
